# sumfolio-android

./: .gitmodules  README.md  build.gradle
app/: CMakeLists.txt  build.gradle  google-services.json
app/brd/release/: output.json
app/src/androidTest/java/com/breadwallet/database/: DatabaseTests.java
app/src/androidTest/java/com/breadwallet/platform/: KVStoreTests.java  PlatformTests.java
app/src/androidTest/java/com/breadwallet/presenter/: ScanResultTest.java
app/src/androidTest/java/com/breadwallet/screenshots/: JUnit4StyleTests.java
app/src/androidTest/java/com/breadwallet/security/: KeyStoreTests.java  NewKeyStoreTests.java
app/src/androidTest/java/com/breadwallet/wallet/: WalletTests.java
app/src/brdTestnet/: google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/breadwallet/presenter/activities/: ManageWalletsActivity.java
app/src/main/java/com/breadwallet/presenter/entities/: CryptoRequest.java
app/src/main/java/com/breadwallet/tools/manager/: BRApiManager.java  BRSharedPrefs.java  DeepLinkingManager.java  SendManager.java
app/src/main/java/com/breadwallet/tools/sqlite/: BRSQLiteHelper.java  BtcBchTransactionDataStore.java  TransactionStorageManager.java
app/src/main/java/com/breadwallet/tools/threads/: ImportPrivKeyTask.java  PaymentProtocolTask.java
app/src/main/java/com/breadwallet/tools/util/: BRConstants.java
app/src/main/java/com/breadwallet/wallet/: WalletsMaster.java
app/src/main/java/com/breadwallet/wallet/util/: CryptoUriParser.java
app/src/main/java/com/platform/: APIClient.java  BRGeoWebSocketHandler.java  BRHTTPHelper.java  GeoLocationManager.java  HTTPServer.java  UserMetricsManager.java
app/src/main/java/com/platform/entities/: TokenListMetaData.java  TxMetaData.java  WalletInfo.java
app/src/main/java/com/platform/interfaces/: KVStoreAdaptor.java  Middleware.java  Plugin.java
app/src/main/java/com/platform/kvstore/: CompletionObject.java  RemoteKVStore.java  ReplicatedKVStore.java
app/src/main/java/com/platform/middlewares/: APIProxy.java  HTTPFileMiddleware.java  HTTPIndexMiddleware.java  HTTPRouter.java
app/src/main/java/com/platform/middlewares/plugins/: CameraPlugin.java  GeoLocationPlugin.java  KVStorePlugin.java  LinkPlugin.java  WalletPlugin.java
app/src/main/java/com/platform/sqlite/: KVItem.java  PlatformSqliteHelper.java
app/src/main/java/com/platform/tools/: BRBitId.java  KVStoreManager.java  TokenHolder.java
app/src/main/java/com/sumfolio/: BreadApp.java
app/src/main/java/com/sumfolio/presenter/activities/: AddWalletsActivity.java  CurrencySettingsActivity.java  DisabledActivity.java  HomeActivity.java  InputPinActivity.java  InputWordsActivity.java  LoginActivity.java  ManageWalletsActivity.java  PaperKeyActivity.java  PaperKeyProveActivity.java  WalletActivity.java
app/src/main/java/com/sumfolio/presenter/customviews/: AutoResizeTextView.java  BRButton.java  BRDialogView.java  BREdit.java  BRKeyboard.java  BRLinearLayoutWithCaret.java  BRLockScreenConstraintLayout.java  BRNotificationBar.java  BRRelativeLayout.java  BRSearchBar.java  BRToast.java  BaseTextView.java  PinLayout.java  TokenIconView.java
app/src/main/java/com/sumfolio/presenter/entities/: BRMenuItem.java  BRMerkleBlockEntity.java  BRPeerEntity.java  BRSecurityCenterItem.java  BRSettingsItem.java  BRTransactionEntity.java  BlockEntity.java  CryptoRequest.java  CurrencyEntity.java  PeerEntity.java  TokenItem.java  TxUiHolder.java
app/src/main/java/com/sumfolio/presenter/fragments/: FragmentFingerprint.java  FragmentPhraseWord.java  FragmentReceive.java  FragmentRequestAmount.java  FragmentSend.java  FragmentSignal.java  FragmentSupport.java  FragmentTxDetails.java  PinFragment.java
app/src/main/java/com/sumfolio/presenter/interfaces/: BRAuthCompletion.java  BROnSignalCompletion.java  BreadPayment.java
app/src/main/java/com/sumfolio/presenter/viewmodels/: SendViewModel.java
app/src/main/java/com/sumfolio/tools/adapter/: AddTokenListAdapter.java  CurAdapter.java  ManageTokenListAdapter.java  SettingsAdapter.java  TransactionListAdapter.java  WalletListAdapter.java
app/src/main/java/com/sumfolio/tools/animation/: BRDialog.java  DecelerateOvershootInterpolator.java  ItemTouchHelperAdapter.java  SlideDetector.java  (+4 more)
app/src/main/java/com/sumfolio/wallet/: WalletsMaster.java
app/src/main/java/com/sumpay/: BreadApp.java
app/src/main/java/com/sumpay/wallet/: WalletsMaster.java
app/src/main/res/layout/: activity_about.xml  activity_add_wallets.xml  activity_advanced.xml  activity_camera.xml  activity_currency_settings.xml  activity_disabled.xml  activity_display_currency.xml  activity_fingerprint.xml  activity_home.xml  activity_import.xml  activity_input_words.xml  activity_intro.xml  activity_intro_recover.xml  activity_manage_wallets.xml  activity_nodes.xml  activity_notification.xml  activity_paper_key.xml  activity_paper_key_prove.xml  activity_pin.xml  activity_pin_template.xml  activity_qr.xml  activity_restore.xml  activity_security_center.xml  activity_settings.xml  activity_share_data.xml  activity_spend_limit.xml  activity_sync_blockchain.xml  activity_wallet.xml  activity_web_view.xml  activity_write_down.xml  add_wallets_item.xml  bread_alert_dialog.xml  bread_spinner_item.xml  currency_list_item.xml  dialog_bch_welcome.xml  fingerprint_dialog_container.xml  fragment_greetings.xml  fragment_manage.xml  fragment_menu.xml  fragment_pin.xml  (+22 more)
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sv/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/test/java/: PaperKeyTests.java
(+307 files in other folders)
